--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
 </head>
 
-<body >
-    <!-- Bắt đầu tạo Sticky Navbar-->
-    <div>
+<body>
+    <!-- <div>
         <nav class="navbar navbar-expand-lg navbar-light custom">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +31,7 @@
                 </form>
             </div>
         </nav>
-    </div>
+    </div> -->
 
     <center>
         <div id="main-content">
@@ -88,13 +87,153 @@
                 </div>
             </div>
 
+            <div class="row" style="margin-top:20px">
+                <div class="col-lg-8">
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-1.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-2.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-3.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-4.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-1.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-2.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-3.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-4.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-1.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-2.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-3.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-sm-6" style="margin-top:10px">
+                            <div class="card grid-home">
+                                <img class="card-img-top" src="~/../images/grid-image-4.jpg" alt="Card image cap">
+                                <p class="card-text">Huong Tram</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <ul class="list-unstyled bang-xep-hang">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                        <div class="media" style="margin-bottom:10px">
+                            <img src="~/../images/singer-1.jpg" width="64px" height="64px">
+                            <div class="media-body list-media-text">
+                                <h6 style="text-align:left">Song Xa Anh Chang De Dang</h6>
+                                <p>Ten Ca Si</p>
+                                <p class="small-text">Luot xem</p>
+                            </div>
+                        </div>
+                        <hr class="style11">
+                    </ul>
+                </div>
+            </div>
         </div>
     </center>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/usm/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
