--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!-- <div>
+    <div class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark custom">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
                 </form>
             </div>
         </nav>
-    </div> -->
+    </div>
 
     <div class="lp-vertical-nav">
         <!-- <div style="height: 120px">
@@ -39,12 +39,13 @@
         <div id="btn-close-open" style="background-image: url(images/play-page/button_open.png); transition: 0.5s">
         </div>
         <div id="lp-vertical-nav-content" style="vertical-align: middle; width: 150px">
+                
             <div>
-                <div class="nav-box" style="">
+                <div class="nav-box" >
                     <img src="images/play-page/home-xxl1.png">
                     <p>Trang chủ</p>
                 </div>
-                <div class="nav-box" style="">
+                <div class="nav-box">
                     <img src="images/play-page/images1.png">
                     <p>Nghe</p>
                 </div>
@@ -127,6 +128,69 @@
                 </div>
             </div>
             <div class="row" style="margin-top:20px">
+                <div class="col-lg-8">
+                    <div id="artist-hot">
+                        <div style="padding-right:10px">
+                            <h4>NGHỆ SĨ</h4>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-3 sm-pad">
+                                <img class="card-img borderimg1" src="~/../images/singer-1.jpg">
+                            </div>
+                            <div class="col-lg-9">
+                                <div class="row">
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                    </div>
+                                    <div class="col-lg-2 sm-pad">
+                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4">
+                    <h4 style="margin-top:15px">REALTIME CHART</h4>
+                    <canvas id="myChart"></canvas>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-lg-8">
                     <div id="album-hot">
                         <h4>ALBUM HOT</h4>
@@ -212,7 +276,7 @@
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-unstyled bang-xep-hang">
-                        <h4>BANG XEP HANG</h4>
+                        <h4>BẢNG XẾP HẠNG BÀI HÁT</h4>
                         <hr class="style11">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
@@ -357,9 +421,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                        <h4 class="bg-title">BANG XEP HANG</h4>
                     <ul class="list-unstyled bang-xep-hang">
-                        
+                        <h4>BẢNG XẾP HẠNG VIDEO</h4>
                         <hr class="style11">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/grid-video-1.jpg" width="120px" height="64px">
@@ -402,130 +465,74 @@
                     </ul>
                 </div>
             </div>
-            <div class="row" style="margin-top:20px">
-                <div class="col-lg-8">
-                    <div id="artist-hot">
-                        <h4>Nghe Si</h4>
-                        <div class="row">
-                            <div class="col-lg-3 sm-pad">
-                                <img class="card-img" src="~/../images/singer-1.jpg">
-                            </div>
-                            <div class="col-lg-9">
-                                <div class="row">
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
-                                    </div>
-                                    <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="col-lg-4">
-
-                </div>
-            </div>
         </div>
     </center>
 
-    <!-- <div class="row" style="margin-top:20px">
+    <footer>
         <div id="footer">
-            <div class="content-footer">
-                <div class="content-footer-left" itemscope="" itemtype="http://schema.org/Organization" style="display: inline-block; vertical-align: top">
-                    <img itemprop="logo" src="images/logo2.png" height="100%" width="100%" alt="Zing MP3 - Đỉnh Cao Âm Nhạc" style=" height: 70px; width: 140px">
-                    <p>© 2015 4CONANG Corporation</p>
-                    <p>Giấy phép MXH số 314/GP-BTTTT.</p>
-                </div>
-                <div class="content-footer-center" style="display: inline-block;">
-                    <div>
-                        <a title="Giới thiệu" rel="nofollow" href="https://mp3.zing.vn/huong-dan/about">Giới thiệu</a>
+            <center>
+                <div class="content-footer">
+                    <div class="content-footer-left" itemscope="" itemtype="http://schema.org/Organization" style="display: inline-block; vertical-align: top">
+                        <img itemprop="logo" src="images/logo2.png" height="100%" width="100%" alt="Zing MP3 - Đỉnh Cao Âm Nhạc" style=" height: 70px; width: 140px">
+                        <p>© 2015 4CONANG Corporation</p>
+                        <p>Giấy phép MXH số 314/GP-BTTTT.</p>
                     </div>
-                    <div>
-                        <a title="Điều khoản" rel="nofollow" href="https://mp3.zing.vn/huong-dan/terms">Điều khoản</a>
+                    <div class="content-footer-center" style="display: inline-block;">
+                        <div>
+                            <a title="Giới thiệu" rel="nofollow" href="https://mp3.zing.vn/huong-dan/about">Giới thiệu</a>
+                        </div>
+                        <div>
+                            <a title="Điều khoản" rel="nofollow" href="https://mp3.zing.vn/huong-dan/terms">Điều khoản</a>
+                        </div>
+                        <div>
+                            <a title="Quảng cáo" rel="nofollow" href="http://ads.zing.vn/" target="_blank">Quảng cáo</a>
+                        </div>
+                        <div>
+                            <a title="FAQs" rel="nofollow" href="http://v3.mp3.zing.vn/huong-dan/index.html">FAQs</a>
+                        </div>
+                        <div>
+                            <a title="Copyright" rel="nofollow" href="https://mp3.zing.vn/huong-dan/copyright">Copyright</a>
+                        </div>
+                        <div>
+                            <a title="MP3 VIP" href="http://mp3.zing.vn/vip">MP3 VIP</a>
+                        </div>
+                        <div>
+                            <a title="Ứng dụng" href="https://mp3.zing.vn/apps">Ứng dụng</a>
+                        </div>
+                        <div>
+                            <a title="Góp ý/Báo lỗi" rel="nofollow" href="https://docs.google.com/forms/d/1EHv8aYwV3rqUX3KE4H9IKpawf11cXFt8hr1iuW1pBWA/viewform?c=0&amp;w=1"
+                                target="_blank">Góp ý</a>
+                        </div>
+                        <div>
+                            <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
+                        </div>
+                        <div>
+                            <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
+                        </div>
+                        <div>
+                            <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
+                        </div>
+                        <div>
+                            <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
+                        </div>
+                        <div>
+                            <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
+                        </div>
+                        <div>
+                            <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
+                        </div>
+                        <div>
+                            <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
+                        </div>
                     </div>
-                    <div>
-                        <a title="Quảng cáo" rel="nofollow" href="http://ads.zing.vn/" target="_blank">Quảng cáo</a>
-                    </div>
-                    <div>
-                        <a title="FAQs" rel="nofollow" href="http://v3.mp3.zing.vn/huong-dan/index.html">FAQs</a>
-                    </div>
-                    <div>
-                        <a title="Copyright" rel="nofollow" href="https://mp3.zing.vn/huong-dan/copyright">Copyright</a>
-                    </div>
-                    <div>
-                        <a title="MP3 VIP" href="http://mp3.zing.vn/vip">MP3 VIP</a>
-                    </div>
-                    <div>
-                        <a title="Ứng dụng" href="https://mp3.zing.vn/apps">Ứng dụng</a>
-                    </div>
-                    <div>
-                        <a title="Góp ý/Báo lỗi" rel="nofollow" href="https://docs.google.com/forms/d/1EHv8aYwV3rqUX3KE4H9IKpawf11cXFt8hr1iuW1pBWA/viewform?c=0&amp;w=1"
-                            target="_blank">Góp ý</a>
-                    </div>
-                    <div>
-                        <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
-                    </div>
-                    <div>
-                        <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
-                    </div>
-                    <div>
-                        <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
-                    </div>
-                    <div>
-                        <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
-                    </div>
-                    <div>
-                        <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
-                    </div>
-                    <div>
-                        <a title="APIs" rel="nofollow" href="https://mp3.zing.vn/huong-dan/developer">APIs</a>
-                    </div>
-                    <div>
-                        <a title="divên hệ" rel="nofollow" href="https://mp3.zing.vn/huong-dan/contact">liên hệ</a>
-                    </div>
-                </div>
-                <div class="content-footer-right" style="display: inline-block;">
+                    <div class="content-footer-right" style="display: inline-block;">
 
+                    </div>
                 </div>
-            </div>
+            </center>
+
         </div>
-    </div> -->
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -534,7 +541,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
     <script>
         var navBar = {
             isOpenNav: false,
@@ -606,7 +613,7 @@
             }
         );
 
-        $("#btn-close-open").click(function () {
+        $("#btn-close-open").mouseenter(function () {
             setWidthNav();
         })
         $(window).resize(() => {
@@ -694,6 +701,44 @@
 
 
         }
+
+        var ctx = document.getElementById("myChart").getContext('2d');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+                datasets: [{
+                    label: '# of Votes',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255,99,132,1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
     </script>
 </body>
 
