--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="sticky-top">
+    <!-- <div class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark custom">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
                 </form>
             </div>
         </nav>
-    </div>
+    </div> -->
 
     <div class="lp-vertical-nav">
         <!-- <div style="height: 120px">
@@ -39,9 +39,9 @@
         <div id="btn-close-open" style="background-image: url(images/play-page/button_open.png); transition: 0.5s">
         </div>
         <div id="lp-vertical-nav-content" style="vertical-align: middle; width: 150px">
-                
+
             <div>
-                <div class="nav-box" >
+                <div class="nav-box">
                     <img src="images/play-page/home-xxl1.png">
                     <p>Trang chủ</p>
                 </div>
@@ -129,11 +129,10 @@
             </div>
             <div class="row" style="margin-top:20px">
                 <div class="col-lg-8">
+                    <div style="padding-right:10px;">
+                        <h4>NGHỆ SĨ</h4>
+                    </div>
                     <div id="artist-hot">
-                        <div style="padding-right:10px">
-                            <h4>NGHỆ SĨ</h4>
-                        </div>
-
                         <div class="row">
                             <div class="col-lg-3 sm-pad">
                                 <img class="card-img borderimg1" src="~/../images/singer-1.jpg">
@@ -141,42 +140,42 @@
                             <div class="col-lg-9">
                                 <div class="row">
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-1.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-2.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-3.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-4.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-2.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-1.jpg">
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-3.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-4.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-3.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-3.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-1.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-1.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-2.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-2.jpg">
                                     </div>
                                     <div class="col-lg-2 sm-pad">
-                                        <img class="card-img" src="~/../images/singer-4.jpg">
+                                        <img class="card-img shadow" src="~/../images/singer-4.jpg">
                                     </div>
                                 </div>
 
@@ -186,15 +185,16 @@
 
                 </div>
                 <div class="col-lg-4">
-                    <h4 style="margin-top:15px">REALTIME CHART</h4>
+                    <h4>REALTIME CHART</h4>
                     <canvas id="myChart"></canvas>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-8">
+            
+            <div class="row" >
+                <div class="col-lg-8 ">
+                    <h4>ALBUM HOT</h4>
                     <div id="album-hot">
-                        <h4>ALBUM HOT</h4>
-                        <div class="row">
+                        <div class="row ">
                             <div class="col-lg-3 col-sm-6" style="margin-top:10px">
                                 <div class="card grid-home">
                                     <img class="card-img-top" src="~/../images/grid-image-1.jpg" alt="Card image cap">
@@ -275,8 +275,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
+                    <h4>BẢNG XẾP HẠNG BÀI HÁT</h4>
                     <ul class="list-unstyled bang-xep-hang">
-                        <h4>BẢNG XẾP HẠNG BÀI HÁT</h4>
                         <hr class="style11">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
@@ -338,8 +338,8 @@
             </div>
             <div class="row" style="margin-top:20px">
                 <div class="col-lg-8">
-                    <div id="album-hot">
-                        <h4>VIDEO HOT</h4>
+                    <h4>VIDEO HOT</h4>
+                    <div id="video-hot">
                         <div class="row">
                             <div class="col-lg-3 col-sm-6" style="margin-top:10px">
                                 <div class="card grid-home">
@@ -421,8 +421,8 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
+                    <h4>BẢNG XẾP HẠNG VIDEO</h4>
                     <ul class="list-unstyled bang-xep-hang">
-                        <h4>BẢNG XẾP HẠNG VIDEO</h4>
                         <hr class="style11">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/grid-video-1.jpg" width="120px" height="64px">
@@ -704,30 +704,52 @@
 
         var ctx = document.getElementById("myChart").getContext('2d');
         var myChart = new Chart(ctx, {
-            type: 'bar',
+            type: 'line',
             data: {
                 labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
                 datasets: [{
-                    label: '# of Votes',
-                    data: [12, 19, 3, 5, 2, 3],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(153, 102, 255, 0.2)',
-                        'rgba(255, 159, 64, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255,99,132,1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(153, 102, 255, 1)',
-                        'rgba(255, 159, 64, 1)'
-                    ],
-                    borderWidth: 1
-                }]
+                        label: '# of Views',
+                        data: [12, 19, 3, 5, 2, 3],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)',
+                            'rgba(153, 102, 255, 0.2)',
+                            'rgba(255, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255,99,132,1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    },
+                    {
+                        label: '# of Downloads',
+                        data: [21, 10, 13, 15, 21, 13],
+                        backgroundColor: [
+                            'rgba(255, 99, 255, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(86, 206, 86, 0.2)',
+                            'rgba(64, 192, 75, 0.2)',
+                            'rgba(153, 64, 64, 0.2)',
+                            'rgba(159, 159, 64, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255,99,132,1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)',
+                            'rgba(153, 102, 255, 1)',
+                            'rgba(255, 159, 64, 1)'
+                        ],
+                        borderWidth: 1
+                    }
+                ]
             },
             options: {
                 scales: {
