--- a/play-page.html
+++ b/play-page.html
@@ -206,61 +206,61 @@
 				<div id="right-column" style="vertical-align: top; text-align: initial; padding: 10px;">
 					<h4>BẢNG XẾP HẠNG BÀI HÁT</h4>
                     <ul class="list-unstyled bang-xep-hang">
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <div class="media" style="margin-bottom:10px">
                             <img src="~/../images/singer-1.jpg" width="64px" height="64px">
                             <div class="media-body list-media-text">
                                 <h6 style="text-align:left">Sống Xa Anh Chẳng Dễ Dàng</h6>
-                                <p class="text-light">Tên Ca Sĩ</p>
+                                <p class="extralight-text">Tên Ca Sĩ</p>
                                 <p class="small-text">Lượt xem</p>
                             </div>
                         </div>
-                        <hr class="style11">
+                        <hr class="hr-style">
                         <a href="#">Xem thêm ></a>
                     </ul>
 				</div>
@@ -503,8 +503,8 @@
 
         }
 
-        var ctx = document.getElementById("myChart").getContext('2d');
-        var myChart = new Chart(ctx, {
+        var ctx = document.getElementById("reatimeChart").getContext('2d');
+        var reatimeChart = new Chart(ctx, {
             type: 'line',
             data: {
                 labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
